--- a/Practica1/app/src/main/res/menu/menu_main.xml
+++ b/Practica1/app/src/main/res/menu/menu_main.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/action_add"
-        android:icon="@android:drawable/ic_menu_sort_by_size"
-        android:title="Item"
+        android:icon="@android:drawable/ic_input_add"
+        android:title="addCar"
         app:showAsAction="always" />
 </menu>
