--- a/Practica1/app/src/main/res/layout/detail_cotxe.xml
+++ b/Practica1/app/src/main/res/layout/detail_cotxe.xml
@@ -154,7 +154,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingBottom="50dp">
 
         <TextView
             android:id="@+id/latitudeText"
@@ -173,4 +174,15 @@
             android:inputType="numberDecimal" />
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/saveButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:backgroundTint="@color/purple_200"
+        android:onClick="recollirDadesCotxe"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:text="SAVE" />
 </LinearLayout>
