--- a/Practica1/app/src/main/res/layout/detail_cotxe.xml
+++ b/Practica1/app/src/main/res/layout/detail_cotxe.xml
@@ -177,7 +177,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <Button
@@ -190,6 +190,21 @@
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:text="@string/guardar" />
+
+        <Button
+            android:id="@+id/deleteBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="deleteBtn"
+            android:text="@string/eliminar" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/cancelBtn"
