--- a/Practica1/app/src/main/res/menu/menu_datail_cotxe.xml
+++ b/Practica1/app/src/main/res/menu/menu_datail_cotxe.xml
@@ -3,10 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/action_add"
+        android:id="@+id/action_back"
         android:enabled="true"
-        android:icon="@android:drawable/ic_input_add"
-        android:title="addCar"
+        android:icon="?attr/actionModeCloseDrawable"
+        android:title="back"
         android:visible="true"
         app:showAsAction="always" />
 </menu>
