--- a/Practica1/app/src/main/res/menu/menu_datail_cotxe.xml
+++ b/Practica1/app/src/main/res/menu/menu_datail_cotxe.xml
@@ -1,12 +1,3 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item
-        android:id="@+id/action_back"
-        android:enabled="true"
-        android:icon="?attr/actionModeCloseDrawable"
-        android:title="back"
-        android:visible="true"
-        app:showAsAction="always" />
-</menu>
+    xmlns:android="http://schemas.android.com/apk/res/android"/>
