--- a/Practica1/app/src/main/res/layout/detail_cotxe.xml
+++ b/Practica1/app/src/main/res/layout/detail_cotxe.xml
@@ -207,7 +207,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/cancelBtn"
+            android:id="@+id/googleMapsBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="cancelBtn"
