--- a/Practica1/app/src/main/res/layout/activity_info_cotxe.xml
+++ b/Practica1/app/src/main/res/layout/activity_info_cotxe.xml
@@ -19,7 +19,7 @@
 
         <TextView
             android:id="@+id/tvPlate"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0" />
 
@@ -155,7 +155,7 @@
 
         <TextView
             android:id="@+id/tvLatitud"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0" />
 
