--- a/Practica1/app/src/main/res/layout/row.xml
+++ b/Practica1/app/src/main/res/layout/row.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingBottom="6dp"
+    android:paddingTop="6dp">
 
     <TextView
         android:id="@+id/tvAlias"
